Replace legacy CSV flow with ReadCsv validation flow
Remove legacy CSV handler/service and implement header-level plus row-level validation flow